// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Save Photo Menu test suite: ColorTagMenu tests:  Renders properly 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
  >
    <View>
      <View
        collapsable={false}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          testID="ColorTagMenu-trigger"
        >
          <View
            ctx={
              Object {
                "menuActions": Object {
                  "_getOpenedMenu": [Function],
                  "_notify": [Function],
                  "closeMenu": [Function],
                  "isMenuOpen": [Function],
                  "openMenu": [Function],
                  "toggleMenu": [Function],
                },
                "menuRegistry": Object {
                  "getAll": [Function],
                  "getMenu": [Function],
                  "setOptionsCustomStyles": [Function],
                  "subscribe": [Function],
                  "unsubscribe": [Function],
                  "updateLayoutInfo": [Function],
                },
              }
            }
            style={
              Array [
                undefined,
                undefined,
              ]
            }
          >
            <View
              accessibilityLabel="Select color tag"
              accessible={true}
              style={
                Object {
                  "backgroundColor": "white",
                  "borderRadius": 9,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "marginHorizontal": 5,
                  "paddingVertical": 2,
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": "black",
                      "fontSize": 14,
                    },
                    Object {
                      "right": 5,
                    },
                    Object {
                      "fontFamily": "Feather",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
              <Text>
                Black
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    pointerEvents="box-none"
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      collapsable={false}
      onLayout={[Function]}
      pointerEvents="box-none"
      style={
        Object {
          "flex": 1,
        }
      }
    />
  </RCTSafeAreaView>
</View>
`;

exports[`Save Photo Menu test suite: SavePhotoMenu tests:  Renders properly 1`] = `
<Modal
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          undefined,
          undefined,
          undefined,
        ]
      }
    >
      <View
        accessibilityLabel="Save Photo Menu"
        accessible={true}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#1F1F1F",
            "borderRadius": 40,
            "flex": 1,
            "marginHorizontal": 20,
            "marginVertical": 333.5,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "paddingTop": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "white",
                "fontSize": 28,
              }
            }
          >
            Select Tags
          </Text>
        </View>
        <View
          style={
            Object {
              "flex": 3,
              "flexDirection": "row",
              "paddingHorizontal": 10,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 45,
                "justifyContent": "center",
                "marginRight": 10,
              }
            }
          >
            <Image
              source={
                Object {
                  "uri": "data:image/png;base64,base64",
                }
              }
              style={
                Object {
                  "height": 140,
                  "marginRight": 10,
                  "width": 140,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "flex": 55,
                "justifyContent": "space-evenly",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "white",
                  "fontSize": 14,
                }
              }
            >
              Color:
            </Text>
            <View>
              <View
                collapsable={false}
              >
                <View
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  testID="ColorTagMenu-trigger"
                >
                  <View
                    ctx={
                      Object {
                        "menuActions": Object {
                          "_getOpenedMenu": [Function],
                          "_notify": [Function],
                          "closeMenu": [Function],
                          "isMenuOpen": [Function],
                          "openMenu": [Function],
                          "toggleMenu": [Function],
                        },
                        "menuRegistry": Object {
                          "getAll": [Function],
                          "getMenu": [Function],
                          "setOptionsCustomStyles": [Function],
                          "subscribe": [Function],
                          "unsubscribe": [Function],
                          "updateLayoutInfo": [Function],
                        },
                      }
                    }
                    style={
                      Array [
                        undefined,
                        undefined,
                      ]
                    }
                  >
                    <View
                      accessibilityLabel="Select color tag"
                      accessible={true}
                      style={
                        Object {
                          "backgroundColor": "white",
                          "borderRadius": 9,
                          "flexDirection": "row",
                          "justifyContent": "center",
                          "marginHorizontal": 5,
                          "paddingVertical": 2,
                        }
                      }
                    >
                      <Text
                        allowFontScaling={false}
                        style={
                          Array [
                            Object {
                              "color": "black",
                              "fontSize": 14,
                            },
                            Object {
                              "right": 5,
                            },
                            Object {
                              "fontFamily": "Feather",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                            Object {},
                          ]
                        }
                      >
                        
                      </Text>
                      <Text>
                        Black
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
            <Text
              style={
                Object {
                  "color": "white",
                  "fontSize": 14,
                }
              }
            >
              Type:
            </Text>
            <View>
              <View
                collapsable={false}
              >
                <View
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                >
                  <View
                    ctx={
                      Object {
                        "menuActions": Object {
                          "_getOpenedMenu": [Function],
                          "_notify": [Function],
                          "closeMenu": [Function],
                          "isMenuOpen": [Function],
                          "openMenu": [Function],
                          "toggleMenu": [Function],
                        },
                        "menuRegistry": Object {
                          "getAll": [Function],
                          "getMenu": [Function],
                          "setOptionsCustomStyles": [Function],
                          "subscribe": [Function],
                          "unsubscribe": [Function],
                          "updateLayoutInfo": [Function],
                        },
                      }
                    }
                    style={
                      Array [
                        undefined,
                        undefined,
                      ]
                    }
                  >
                    <View
                      accessibilityLabel="Select clothing type tag"
                      accessible={true}
                      style={
                        Object {
                          "backgroundColor": "white",
                          "borderRadius": 9,
                          "flexDirection": "row",
                          "justifyContent": "center",
                          "marginHorizontal": 5,
                          "paddingVertical": 2,
                        }
                      }
                    >
                      <Text
                        allowFontScaling={false}
                        style={
                          Array [
                            Object {
                              "color": "black",
                              "fontSize": 14,
                            },
                            Object {
                              "right": 5,
                            },
                            Object {
                              "fontFamily": "Feather",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                            Object {},
                          ]
                        }
                      >
                        
                      </Text>
                      <Text>
                        Outerwear
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 2,
              "flexDirection": "row",
              "justifyContent": "space-evenly",
              "paddingHorizontal": 1,
            }
          }
        >
          <View
            accessibilityLabel="Discard button"
            accessible={true}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#141414",
                "borderRadius": 15,
                "flex": 1,
                "height": 50,
                "justifyContent": "center",
                "marginHorizontal": 20,
                "opacity": 1,
                "width": 1,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "white",
                    "fontSize": 18,
                  }
                }
              >
                Discard
              </Text>
            </View>
          </View>
          <View
            accessibilityLabel="Save button"
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "rgb(227, 131, 4)",
                "borderRadius": 15,
                "flex": 1,
                "height": 50,
                "justifyContent": "center",
                "marginHorizontal": 20,
                "opacity": 1,
                "width": 1,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "white",
                    "fontSize": 18,
                  }
                }
              >
                Save
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <RCTSafeAreaView
      emulateUnlessSupported={true}
      pointerEvents="box-none"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        onLayout={[Function]}
        pointerEvents="box-none"
        style={
          Object {
            "flex": 1,
          }
        }
      />
    </RCTSafeAreaView>
  </View>
</Modal>
`;

exports[`Save Photo Menu test suite: TypeTagMenu tests:  Renders properly 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
  >
    <View>
      <View
        collapsable={false}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            ctx={
              Object {
                "menuActions": Object {
                  "_getOpenedMenu": [Function],
                  "_notify": [Function],
                  "closeMenu": [Function],
                  "isMenuOpen": [Function],
                  "openMenu": [Function],
                  "toggleMenu": [Function],
                },
                "menuRegistry": Object {
                  "getAll": [Function],
                  "getMenu": [Function],
                  "setOptionsCustomStyles": [Function],
                  "subscribe": [Function],
                  "unsubscribe": [Function],
                  "updateLayoutInfo": [Function],
                },
              }
            }
            style={
              Array [
                undefined,
                undefined,
              ]
            }
          >
            <View
              accessibilityLabel="Select clothing type tag"
              accessible={true}
              style={
                Object {
                  "backgroundColor": "white",
                  "borderRadius": 9,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "marginHorizontal": 5,
                  "paddingVertical": 2,
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": "black",
                      "fontSize": 14,
                    },
                    Object {
                      "right": 5,
                    },
                    Object {
                      "fontFamily": "Feather",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
              <Text>
                Outerwear
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    pointerEvents="box-none"
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      collapsable={false}
      onLayout={[Function]}
      pointerEvents="box-none"
      style={
        Object {
          "flex": 1,
        }
      }
    />
  </RCTSafeAreaView>
</View>
`;
